--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,18 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app_env: '%env(APP_ENV)%'
+    upload_image_directory: '%kernel.project_dir%/public/images'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+        bind: 
+            $appEnv: '%app_env%'
+    
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -29,3 +35,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\UploadService:
+        arguments:
+            $uploadImageDirectory: '%upload_image_directory%'
