--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    email_admin: '%env(EMAIL_ADMIN)%'
+    email_developer: '%env(EMAIL_DEVELOPER)%'
     app_env: '%env(APP_ENV)%'
     upload_image_directory: '%kernel.project_dir%/public/images'
 
@@ -35,7 +37,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-
+    App\Service\EmailService:
+        arguments:
+            $emailAdmin: '%email_admin%'
+            $emailDeveloper: '%email_developer%'
+            
     App\Service\UploadService:
         arguments:
             $uploadImageDirectory: '%upload_image_directory%'
