--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,11 +44,11 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
+    # access_control:
 
-         - { path: ^/a/admin/, roles: ROLE_ADMIN }
-         - { path: ^/a/espace-membre/, roles: ROLE_MEMBER }
-         - { path: ^/a/, roles: ROLE_USER }
+    #      - { path: ^/a/admin/, roles: ROLE_ADMIN }
+    #      - { path: ^/a/espace-membre/, roles: ROLE_MEMBER }
+    #      - { path: ^/a/, roles: ROLE_USER }
 
     
     # role_hierarchy:
